WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
252535
location.href should throw "SyntaxError" DOMException on URL parser failure
https://bugs.webkit.org/show_bug.cgi?id=252535
Summary
location.href should throw "SyntaxError" DOMException on URL parser failure
Anne van Kesteren
Reported
2023-02-18 07:08:47 PST
I discovered that the test for this was wrong and fixed it in
https://github.com/web-platform-tests/wpt/pull/38581
. This essentially asks for a revert of
bug 229303
which I suspect was based on this test and not the specification.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-02-18 07:09:03 PST
<
rdar://problem/105631453
>
Chris Dumez
Comment 2
2023-02-19 13:20:03 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10351
EWS
Comment 3
2023-02-20 09:13:35 PST
Committed
260539@main
(37c7b03669eb): <
https://commits.webkit.org/260539@main
> Reviewed commits have been landed. Closing PR #10351 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug