location.href should throw "SyntaxError" DOMException on URL parser failure https://bugs.webkit.org/show_bug.cgi?id=252535 rdar://105631453

Reviewed by Sihui Liu.

* LayoutTests/fast/dom/location-new-window-no-crash-expected.txt:
Rebaseline existing test due to different exception type.

* LayoutTests/imported/w3c/web-platform-tests/url/failure.html:
Resync WPT test after https://github.com/web-platform-tests/wpt/pull/38581.

* Source/WebCore/page/Location.cpp:
(WebCore::Location::setLocation):
Throw a SyntaxError instead of a TypeError when URL parsing failed.

Canonical link: https://commits.webkit.org/260539@main